--- a/assets/content-templates/campanas-nacionales.html
+++ b/assets/content-templates/campanas-nacionales.html
@@ -32,7 +32,7 @@
 		<h3>Ángeles Cibernéticos</h3>
 		<hr />
 		<p>
-			Creemos en las redes sociales, en el aspecto colaborativo de Internet que nos permite llevar nuestro mensaje y unir voluntades a nuestra causa. Cada persona con un Sitio Web, Blog, Twitter, Facebook, Google+, Instagram, Pinterest, Tumblr, Blogger puede ayudarnos a replicar nuestro mensaje. Basta con colocar alguno de nuestros <i>banners</i> en su red y enlazarla a nuesta web. Permitiendo así que más personas sepan de nosotros, para ayudar y ser ayudadas.
+			Creemos en las redes sociales, en el aspecto colaborativo de Internet que nos permite transmitir nuestro mensaje y unir voluntades a nuestra causa. Cada persona con un Sitio Web, Blog, Twitter, Facebook, Google+, Instagram, Pinterest, Tumblr, Blogger puede ayudarnos a replicar nuestro mensaje. Basta con colocar alguno de nuestros <i>banners</i> en su red y enlazarla a nuesta web. Permitiendo así que más personas sepan de nosotros, para ayudar y ser ayudadas.
 		</p>
 	</div>
 </div>
