--- a/assets/content-templates/campanas-internacionales.html
+++ b/assets/content-templates/campanas-internacionales.html
@@ -3,6 +3,7 @@
 		<p class="lead">
 			Fuera de Venezuela también realizamos campañas para obtener medicamentos, insumos médicos y dinero en metálico, todo esto en forma de donaciones de particulares y/o empresas. Esto es posible gracias a convenios particulares establecidos entre nuestra fundación y ciudadanos venezolanos radicados fuera del país. En la actualidad la Fundación Sanando recibe apoyo de voluntarios en España y Canadá.
 		</p>
+		<hr />
 	</div>
 	<div class="col-lg-6">
 		<h3>Chocolatadas Solidarias</h3>
@@ -10,20 +11,23 @@
 		<p>
 			Esta fantástica campaña fue propuesta por la Lic. Helen López, con el fin de recolectar medicamentos en la ciudad de Madrid, España a cambio de chocolate caliente de origen venezolano. Esta iniciativa ha sido bastante exitosa y nos ha permitido contar con medicamentos muy importantes que no se consiguen en nuestro país en la actualidad.
 		</p>
+		<a class="btn btn-success" href="chocolatadas-solidarias" title="Chocolatadas Solidarias">Ver Campaña</a>
 	</div>
 	<div class="col-lg-6">
 		<h3>Jornadas de Recolección</h3>
 		<hr />
 		<p>
-			Martha Blanco desde Galicia, España coordina la recolección de medicamentos con apoyo de la Asociación Ourensá Venezolana "Alma Llanera". Y desde Montreal, Canadá nos ayudan los venezolanos Carlos Andrés Bromley Bautista y María Fernanda Benavides de la Concha. Gracias a este grupo de voluntarios es posible traer a Venezuela medicamentos que son difíciles y en algunos casos imposibles de conseguir en la actualidad.
+			Martha Blanco en Galicia, España coordina la recolección de medicamentos con apoyo de la Asociación Ourensá Venezolana "Alma Llanera". Y desde Montreal, Canadá nos ayudan los venezolanos Carlos Andrés Bromley Bautista y María Fernanda Benavides de la Concha. Gracias a este grupo de voluntarios es posible traer medicamentos escazos en la actualidad.
 		</p>
+		<a class="btn btn-success" href="jornadas-recoleccion-internacionales" title="Jornadas de Recolección Internacionales">Ver Campaña</a>
 	</div>
 	<div class="col-lg-6">
 		<h3>Ángeles Viajeros</h3>
 		<hr />
 		<p>
-			Así como existen restricciones a nivel interno, también es un reto enviar medicamentos desde fuera de Venezuela. Debido a esta situación, surgió la idea de los ángeles viajeros quienes son personas que viajan con destino a Venezuela y están dispuestas a dejar un espacio en sus equipajes para traer una bolsa con parte de los medicamentos recolectados en las distintas campañas realizadas. Gracias a ellas es posible para nosotros entregar <strong>gratuitamente</strong> medicamentos de alto costo o muy difíciles de conseguir a pacientes que requieren de ellos con urgencia.
+			Así como existen restricciones a nivel interno, también es un reto enviar medicamentos desde fuera de Venezuela. Debido a esta situación, surgió la idea de los ángeles viajeros quienes son personas que viajan con destino a Venezuela y están dispuestas a regalarnos un espacio en sus equipajes para traer una bolsa con algunos de los medicamentos recolectados en las campañas.
 		</p>
+		<a class="btn btn-success" href="angeles-viajeros-internacionales" title="Ángeles Viajeros Internacionales">Ver Campana</a>
 	</div>
 	<div class="col-lg-6">
 		<h3>Colección Mini Giovanna Venezuela</h3>
@@ -31,5 +35,6 @@
 		<p>
 			La aclamada diseñadora Venezolana Yliana Yépez desde la ciudad de Nueva York, Estados Unidos, decidió crear la colección <strong>Mini Giovanna Venezuela</strong>, cuyas ganancias obtenidas de la venta son utilizadas para obtener medicamentos que luego hacemos llegar a los pacientes que los han solicitado de forma completamente <strong>gratuita</strong>.
 		</p>
+		<a href="mini-giovanna-venezuela" title="Mini Giovanna Venezuela" class="btn btn-success">Ver Campaña</a>
 	</div>
 </div>
