--- a/assets/content-templates/campanas-internacionales.html
+++ b/assets/content-templates/campanas-internacionales.html
@@ -27,7 +27,7 @@
 		<p>
 			Así como existen restricciones a nivel interno, también es un reto enviar medicamentos desde fuera de Venezuela. Debido a esta situación, surgió la idea de los ángeles viajeros quienes son personas que viajan con destino a Venezuela y están dispuestas a regalarnos un espacio en sus equipajes para traer una bolsa con algunos de los medicamentos recolectados en las campañas.
 		</p>
-		<a class="btn btn-success" href="angeles-viajeros-internacionales" title="Ángeles Viajeros Internacionales">Ver Campana</a>
+		<a class="btn btn-success" href="angeles-viajeros-internacionales" title="Ángeles Viajeros Internacionales">Ver Campaña</a>
 	</div>
 	<div class="col-lg-6">
 		<h3>Colección Mini Giovanna Venezuela</h3>
