--- a/assets/content-templates/donantes-en-especie.html
+++ b/assets/content-templates/donantes-en-especie.html
@@ -211,6 +211,16 @@
   <div class="col-md-12">
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
+        <img class="hidden-xs hidden-sm" src="http://staticelite.info/sanando/images/donantes/alvaro-300x150.png" alt="Alvaro Torrens">
+        <div class="caption">
+          <h3>Alvaro Torrens</h3>
+          <p>Donó la ilustración de la sede con manos.</p>
+          <p><a href="http://be.net/drawalv" target="_blank" class="btn btn-primary" role="button">Portafolio</a></p>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6 col-md-4">
+      <div class="thumbnail">
         <div class="caption">
           <h3>Fundación Juan Pablo II</h3>
           <p>Donó una computadora de escritorio.</p>
