--- a/assets/content-templates/angeles-viajeros-internacionales.html
+++ b/assets/content-templates/angeles-viajeros-internacionales.html
@@ -1,7 +1,7 @@
 <div class="row">
 	<div class="col-lg-12">
 		<p class="lead">
-			Los <strong>Ángeles Viajeros</strong> son personas que viajan con destino a Venezuela, bien sea desde España o Canadá que estén dispuestas a regarlanos un espacio en sus equipajes para traer algunos medicamentos.
+			Los <strong>Ángeles Viajeros</strong> son personas que viajan con destino a Venezuela, bien sea desde España o Canadá que están dispuestas a regarlanos un espacio en sus equipajes para traer algunos medicamentos.
 		</p>
 		<p class="lead">
 			En nuestra cuenta de Instagram <a href="http://instagram.com/SanandoVE" target="_blank">@SanandoVE</a> publicaremos regularmente las fotografías de los medicamentos recibidos a través de esta campaña.
@@ -18,17 +18,159 @@
 		<div class="col-lg-4">
 			<h3>¿Pagan por Esto?</h3>
 			<p>
-				Somos una fundación <strong>sin fines de lucro</strong>, no contamos con recursos económicos ni para cubrir nuestros gastos administrativos. Por esta razón, apelamos a la generosidad de los viajeros y esperamos que quienes se ofrezcan como nuestros ángeles viajeros lo hagan por altruismo y buena voluntad, no por deseos de riqueza y fama.
+				Somos una fundación <strong>sin fines de lucro</strong>, aún no contamos con recursos económicos para cubrir nuestros gastos administrativos. Por esta razón, apelamos a la generosidad de los viajeros y esperamos que quienes se ofrezcan como nuestros ángeles viajeros lo hagan por altruismo y buena voluntad, no por deseos de riqueza y fama.
 			</p>
 		</div>
 		<div class="col-lg-4">
 			<h3>Quiero Ser Ángel Viajero</h3>
 			<p>
-				Nos contenta saber que nuestra misión te ha inspirado a ayudarnos, si deseas traer medicamentos desde España o Canadá solo debes compartir con nosotros algunos datos que nos permitirán entrar en contacto contigo y establecer ciertos criterios para que todo vaya bien para ti y para nosotros. Más abajo encontrarás detalles.
+				Nos contenta saber que nuestra misión le ha inspirado a ayudarnos, si desea traer medicamentos desde España o Canadá solo debe compartir con nosotros algunos datos que nos permitirán entrar en contacto con usted y establecer ciertos criterios para que todo vaya bien para usted y para nosotros. Más abajo encontrará los detalles.
 			</p>
 		</div>
 	</div>
 	<div class="col-lg-12">
 		<hr />
+		<h2>Ser Ángel Viajero</h2>
+		<p class="lead">
+			Para ser ángel viajero primero tenemos que saber quién es la persona, también debe entender cuáles son los compromisos que adquiere al convertirse en uno, las normas que debe cumplir para que no surjan problemas durante el viaje y para que la entrega se efectúe sin problemas.
+		</p>
+		<hr />
+		<div class="col-lg-6">
+			<h3>Requisitos que Solicitamos</h3>
+			<ul class="list-group">
+				<li class="list-group-item"><strong>Datos Personales</strong>
+					<ul class="list-group">
+						<li class="list-group-item list-group-item-info">Nombres y Apellidos</li>
+						<li class="list-group-item list-group-item-info">Número de Pasaporte</li>
+						<li class="list-group-item list-group-item-info">Nacionalidad</li>
+						<li class="list-group-item list-group-item-info">Teléfono de Contacto</li>
+						<li class="list-group-item list-group-item-info">Correo Electrónico</li>
+					</ul>
+				</li>
+				<li class="list-group-item"><strong>Datos del Vuelo</strong>
+					<ul class="list-group">
+						<li class="list-group-item list-group-item-info">Aeropuerto de Salida</li>
+						<li class="list-group-item list-group-item-info">Número de Vuelo</li>
+						<li class="list-group-item list-group-item-info">Fecha de llegada</li>
+						<li class="list-group-item list-group-item-info">Hora de llegada</li>
+						<li class="list-group-item list-group-item-info">Puerta de Desembarque</li>
+					</ul>
+				</li>
+			</ul>
+		</div>
+		<div class="col-lg-6">
+			<h3>Compromisos que Adquiere</h3>
+			<ul class="list-group">
+				<li class="list-group-item list-group-item-warning">Entregar las medicinas e insumos médicos en el punto de recogida asignado.</li>
+				<li class="list-group-item list-group-item-warning">Realizar la entrega en un plazo no mayor a 72 horas de entrada al país.</li>
+				<li class="list-group-item list-group-item-warning">Confirmar 24 horas del viaje, si cumplirá con el compromiso.</li>
+				<li class="list-group-item list-group-item-warning">Mantener el contacto por teléfono y correo electrónico hasta que se realice la entrega.</li>
+				<li class="list-group-item list-group-item-danger">No disponer personalmente del contenido de la encomienda.</li>
+				<li class="list-group-item list-group-item-danger">No vender el contenido de la encomienda.</li>
+				<li class="list-group-item list-group-item-danger">No comprometer con terceros, una parte o todo el contenido del envío.</li>
+			</ul>
+		</div>
+	</div>
+	<div class="col-lg-12">
+		<hr />
+		<h2><span class="glyphicon glyphicon-warning-sign"></span> Importante</h2>
+		<p class="lead">
+			La vida de otras personas está en riesgo, muchos de los pacientes que se encuentran en nuestra lista de espera dependen de uno o varios de los medicamentos que los ángeles viajeros se comprometen a traer.
+		</p>
+		<p class="lead text-danger">
+			Ya que alguien puede morir si un ángel viajero incumple con lo prometido, no podemos dejar de repetir la importancia que tiene para nosotros que el compromiso adquirido se respete.
+		</p>
+	</div>
+	<div class="col-lg-12">
+		<hr />
+		<h2><span class="glyphicon glyphicon-pencil"></span> Registro</h2>
+		<!-- Nav tabs -->
+		<ul class="nav nav-tabs" id="tabs-registro">
+			<li class="active"><a href="#personal" data-toggle="tab">Datos Personales</a></li>
+			<li><a href="#vuelo" data-toggle="tab">Datos del Vuelo</a></li>
+		</ul>
+		<form role="form">
+			<div class="tab-content">
+				<div class="tab-pane active" id="personal">
+					<fieldset>
+						<h3>Datos Personales</h3>
+						<hr />
+						<div class="col-lg-6">
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Nombres</span>
+								<input type="text" class="form-control" id="first-name" name="first-name" placeholder="p.e: María Latina">
+							</div>
+							<br />
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Apellidos</span>
+								<input type="text" class="form-control" id="last-name" name="last-name" placeholder="p.e: Pérez Venezuela">
+							</div>
+							<br />
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Nro. de Pasaporte</span>
+								<input type="text" class="form-control" id="passport" name="passport" placeholder="p.e: 123456789">
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Nacionalidad</span>
+								<input type="text" class="form-control" id="nationality" name="nationality" placeholder="p.e: Venezolana">
+							</div>
+							<br />
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Teléfono</span>
+								<input type="text" class="form-control" id="phone" name="phone" placeholder="p.e: 0424-1234567">
+							</div>
+							<br />
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Correo Electrónico</span>
+								<input type="text" class="form-control" id="email" name="email" placeholder="p.e: hola@ejemplo.com">
+							</div>
+						</div>
+					</fieldset>
+				</div>
+				<div class="tab-pane" id="vuelo">
+					<fieldset>
+						<h3>Datos del Vuelo</h3>
+						<hr />
+						<div class="col-lg-6">
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Aeropuerto de Salida</span>
+								<input type="text" class="form-control" id="airport" name="airport" placeholder="p.e: Adolfo Suárez Madrid-Barajas">
+							</div>
+							<br />
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Número de Vuelo</span>
+								<input type="text" class="form-control" id="flight-number" name="flight-number" placeholder="p.e: IB 6405">
+							</div>
+							<br />
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Fecha de Llegada</span>
+								<input type="text" class="form-control" id="arrival-date" name="arrival-date" placeholder="p.e: 20 Diciembre 2014">
+							</div>
+						</div>
+						<div class="col-lg-6">
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Hora de Llegada</span>
+								<input type="text" class="form-control" id="arrival-time" name="arrival-time" placeholder="p.e: 17:45 (Ven)">
+							</div>
+							<br />
+							<div class="input-group input-group-lg">
+								<span class="input-group-addon">Puerta de Desembarque</span>
+								<input type="text" class="form-control" id="gate" name="gate" placeholder="p.e: 26">
+							</div>
+						</div>
+					</fieldset>
+					<hr />
+					<button type="submit" class="btn btn-success btn-lg">Enviar mis Datos</button>
+				</div>
+			</div>
+		</form>
 	</div>
 </div>
+<script type="text/javascript">
+	jQuery('#tabs-registro a').click(function (e) {
+		e.preventDefault();
+		jQuery(this).tab('show');
+	});
+</script>
