--- a/assets/content-templates/chocolatadas-solidarias.html
+++ b/assets/content-templates/chocolatadas-solidarias.html
@@ -136,7 +136,7 @@
 				"Había un señor pidiendo gel oral Daktarin, que se usa para aliviar las dolencias del cáncer de garganta. Eso no lo dejaba ni comer. Llegó el medicamento desde España y se lo entregamos. Aquí no se consigue. Hemos recibido calmantes, medicamentos para la diabetes y la tiroides, cremas para quemaduras y muchas cosas", precisó.
 			</blockquote>
 			<p>
-				Fundación Sanando se puede contactar a través del teléfono (0424) 264 9100 o por la cuenta en Twitter <a href="https://twitter.com/SanandoVE" target="_blank">@SanandoVE</a>. A Helen López, organizadora de las Chocolatadas Solidarias, se le puede contactar a través de la cuenta <a href="https://twitter.com/CirculosDeFuego" target="_blank">@circulosdefuego</a>
+				Fundación Sanando se puede contactar a través del formulario de contacto o de las redes sociales, Twitter <a href="https://twitter.com/SanandoVE" target="_blank">@SanandoVE</a>, Facebook <a href="https://facebook.com/SanandoVE" target="_blank">/SanandoVE</a>. A Helen López, organizadora de las Chocolatadas Solidarias, se le puede contactar a través de la cuenta <a href="https://twitter.com/CirculosDeFuego" target="_blank">@circulosdefuego</a>
 			</p>
 		</div>
 	</div>
