--- a/assets/content-templates/solicitud-medicamentos.html
+++ b/assets/content-templates/solicitud-medicamentos.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-12 col-sm-10">
-    <p>Para solicitarnos cualquier medicamento, debes completar el formulario a continuación. Asegúrate de proporcionarnos toda la información que te pedimos, de la forma más exacta posible. De otra forma será imposible para nosotros poder canalizar correctamente tu solicitud.</p>
+    <p>Para solicitarnos cualquier medicamento, debe completar el formulario a continuación. Asegúrese de proporcionarnos toda la información que le pedimos, de la forma más exacta posible. De otra forma será imposible para nosotros poder canalizar correctamente su solicitud.</p>
   </div>
 </div>
 <hr />
@@ -15,17 +15,19 @@
           <div id="paso1" class="panel-collapse collapse in">
             <div class="panel-body">
               <div class="row">
-                <div class="col-xs-1">
-                  <input type="text" class="form-control" placeholder="Cant.">
-                </div>
-                <div class="col-xs-5">
-                  <input type="text" class="form-control" placeholder="Nombre del Medicamento">
-                </div>
-                <div class="col-xs-4">
-                  <input type="text" class="form-control" placeholder="Presentación">
+                <div class="drug-group_" style="display:none;">
+                  <div class="col-xs-1">
+                    <input type="text" class="form-control" placeholder="Cant." name="qty_">
+                  </div>
+                  <div class="col-xs-5">
+                    <input type="text" class="form-control" placeholder="Nombre del Medicamento" name="name_">
+                  </div>
+                  <div class="col-xs-4">
+                    <input type="text" class="form-control" placeholder="Presentación" name="formule_">
+                  </div>
                 </div>
                 <div class="col-xs-2">
-                  <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-plus"></span></button>
+                  <button type="button" class="btn btn-primary add-drug" title="Necesito Otro"><span class="glyphicon glyphicon-plus"></span></button>
                 </div>
               </div>
             </div>
@@ -59,3 +61,15 @@
     </form>
   </div>
 </div>
+<script type="text/javascript">
+  var countFlag = 0;
+  jQuery(document).ready(function(){
+    jQuery('.add-drug').unbind('click').on('click tap', function(){
+      var drugGroup = jQuery('.drug-group_').clone();
+      var clone = drugGroup.html().replace(/_/g, countFlag);
+      jQuery(clone).prepend('<br />');
+      jQuery('.drug-group_').after( clone );
+      countFlag++;
+    });
+  });
+</script>
